--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,10 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "error",
+        "import/prefer-default-export": [0],
+        "no-shadow": [0],
         "react/jsx-filename-extension": [0],
         "no-use-before-define": [0],
         "comma-dangle": [
