--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,11 +21,14 @@
     ],
     "rules": {
         "no-unused-vars": "off",
+        "no-return-assign": "off",
+        "react/jsx-props-no-spreading": "off",
+        "import/prefer-default-export": "off",
+        "no-shadow": "off",
+        "react/jsx-filename-extension": "off",
+        "no-use-before-define": "off",
+        "import/no-unresolved": "off",
         "@typescript-eslint/no-unused-vars": "error",
-        "import/prefer-default-export": [0],
-        "no-shadow": [0],
-        "react/jsx-filename-extension": [0],
-        "no-use-before-define": [0],
         "comma-dangle": [
             "error",
             {
@@ -36,7 +39,6 @@
               "functions": "never"
             }
           ],
-          "import/no-unresolved": [0],
           "import/extensions": [
             1,
             {
