--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,50 +1,51 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "airbnb"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": [
-        "plugin:react/recommended",
-        "airbnb"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "@typescript-eslint"
-    ],
-    "rules": {
-        "no-unused-vars": "off",
-        "no-return-assign": "off",
-        "react/jsx-props-no-spreading": "off",
-        "import/prefer-default-export": "off",
-        "no-shadow": "off",
-        "react/jsx-filename-extension": "off",
-        "no-use-before-define": "off",
-        "import/no-unresolved": "off",
-        "@typescript-eslint/no-unused-vars": "error",
-        "comma-dangle": [
-            "error",
-            {
-              "arrays": "never",
-              "objects": "never",
-              "imports": "never",
-              "exports": "never",
-              "functions": "never"
-            }
-          ],
-          "import/extensions": [
-            1,
-            {
-              "ts": "never",
-              "tsx": "never"
-            }
-          ]
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react",
+    "@typescript-eslint"
+  ],
+  "rules": {
+    "no-unused-vars": "off",
+    "no-return-assign": "off",
+    "react/jsx-props-no-spreading": "off",
+    "import/prefer-default-export": "off",
+    "no-shadow": "off",
+    "react/jsx-filename-extension": "off",
+    "no-use-before-define": "off",
+    "import/no-unresolved": "off",
+    "react/prop-types": "off",
+    "@typescript-eslint/no-unused-vars": "error",
+    "comma-dangle": [
+      "error",
+      {
+        "arrays": "never",
+        "objects": "never",
+        "imports": "never",
+        "exports": "never",
+        "functions": "never"
       }
+    ],
+    "import/extensions": [
+      1,
+      {
+        "ts": "never",
+        "tsx": "never"
+      }
+    ]
+  }
 }
