--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
     "no-use-before-define": "off",
     "import/no-unresolved": "off",
     "react/prop-types": "off",
+    "no-param-reassign": "off",
     "@typescript-eslint/no-unused-vars": "error",
     "comma-dangle": [
       "error",
