build(eslintrc): add 'no plus plus' to rules list

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,12 @@
         "ts": "never",
         "tsx": "never"
       }
+    ],
+    "no-plusplus": [
+      "error",
+      {
+        "allowForLoopAfterthoughts": true
+      }
     ]
   }
 }
