--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,7 @@
     "import/no-unresolved": "off",
     "react/prop-types": "off",
     "no-param-reassign": "off",
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "warn",
     "comma-dangle": [
       "error",
       {
